gen/v25.3/rpk/rpk-profile-create.adoc
= rpk profile create
:description: rpk profile create

Create an rpk profile.

There are multiple ways to create a profile. A name must be provided if not
using --from-cloud or --from-rpk-container.

* You can use --from-redpanda to generate a new profile from an existing
  `redpanda.yaml` file. The special values "current" create a profile from the
  current `redpanda.yaml` as it is loaded within rpk.

* You can use --from-profile to generate a profile from an existing profile or
  from from a profile in a yaml file. First, the filename is checked, then an
  existing profile name is checked. The special value "current" creates a new
  profile from the existing profile with any active environment variables or
  flags applied.

* You can use --from-cloud to generate a profile from an existing cloud cluster
  id. Note that you must be logged in with 'rpk cloud login' first. The special
  value "prompt" will prompt to select a cloud cluster to create a profile for.
  For serverless clusters that support both public and private networking, you
  will be prompted to select a network type unless you specify --serverless-network.
  To avoid prompts in automation, explicitly set --serverless-network to 'public'
  or 'private'.

* You can use --from-rpk-container to generate a profile from an existing
  cluster created using 'rpk container start' command. The name is not needed
  when using this flag.

* You can use --set key=value to directly set fields. The key can either be
  the name of a -X flag or the path to the field in the profile's YAML format.
  For example, using --set tls.enabled=true OR --set kafka_api.tls.enabled=true
  is equivalent. The former corresponds to the -X flag tls.enabled, while the
  latter corresponds to the path kafka_api.tls.enabled in the profile's YAML.

The --set flag is always applied last and can be used to set additional fields
in tandem with --from-redpanda or --from-cloud.

The --set flag supports autocompletion, suggesting the -X key format. If you
begin writing a YAML path, the flag will suggest the rest of the path.

It is recommended to always use the --description flag; the description is
printed in the output of 'rpk profile list'.

rpk always switches to the newly created profile.

== Usage

[,bash]
----
rpk profile create [NAME] [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-d, --description |string |Optional description of the profile.

|--from-cloud |string |[="prompt"]   Create and switch to a new profile generated from a Redpanda Cloud cluster ID.

|--from-profile |string |Create and switch to a new profile from an existing profile or from a profile in a yaml file.

|--from-redpanda |string |Create and switch to a new profile from a redpanda.yaml file.

|--from-rpk-container |- |Create and switch to a new profile generated from a running cluster created with rpk container.

|-h, --help |- |Help for create.

|--serverless-network |string |Networking type for serverless clusters: 'public' or 'private' (if not specified, will prompt if both are available).

|-s, --set |stringArray |Create and switch to a new profile, setting profile fields with key=value pairs.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===